--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/html/index.html" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/HTML/index.html" }]
 }
